fixed card-div overlapping

--- a/src/app/style/Card.css
+++ b/src/app/style/Card.css
@@ -6,7 +6,7 @@
   /* background: rgba(57, 89, 246, 0.169); */
   position: relative;
 
-  overflow: hidden;
+  /* overflow: hidden; */
   border-radius: 20px;
 }
 
